WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180735
[iOS] Take process assertion to prevent the service worker process from getting suspended
https://bugs.webkit.org/show_bug.cgi?id=180735
Summary
[iOS] Take process assertion to prevent the service worker process from getti...
Chris Dumez
Reported
2017-12-12 19:34:18 PST
Take process assertion to prevent the service worker process from getting suspended while it is needed.
Attachments
Patch
(14.17 KB, patch)
2017-12-12 21:20 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.85 KB, patch)
2017-12-12 21:28 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-12-12 21:20:15 PST
Created
attachment 329201
[details]
Patch
Chris Dumez
Comment 2
2017-12-12 21:28:51 PST
Created
attachment 329203
[details]
Patch
WebKit Commit Bot
Comment 3
2017-12-13 10:13:51 PST
Comment on
attachment 329203
[details]
Patch Clearing flags on attachment: 329203 Committed
r225850
: <
https://trac.webkit.org/changeset/225850
>
WebKit Commit Bot
Comment 4
2017-12-13 10:13:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-12-13 10:14:32 PST
<
rdar://problem/36023845
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug